# llm_lab

./: .env.example  .gitignore  Gemfile  README.md  main.py  pyproject.toml
.claude/: README.md
.codex/: README.md
python/docs/: README.md
python/src/llm_lab/: __init__.py  __main__.py  claude_agent.py  entry.py  everyone_write_an_agent.py
python/tests/: test_entry.py
